# RoboApp

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: linters.yml
assets/: languages.json
