[project]
name = "RoboChan"
version = "1.0.0"
description = "Robot Control App"
authors = [
  {name = "Yogya Chugh", email = "yogya.developer@gmail.com"}
]

[tool.flet]
assets = ["assets/logo.png"]

[tool.flet.android]
adaptive_icon_background = "C:/Users/Lenovo/OneDrive/Desktop/MyFirstProject/RoboApp/assets/logo.png"
split_per_abi = false

[tool.flet.splash]
android = false